Fix text align

--- a/css/styles.css
+++ b/css/styles.css
@@ -79,7 +79,6 @@ a {
     margin: 18px;
     width: 30%;
     box-sizing: border-box;
-    text-align: center;
     background-color: rgba(47, 79, 79, 0.894);
 }
 
@@ -88,6 +87,10 @@ a {
     display: inline-block;
     border: 2px solid #8d6788;
     padding: 5px;
+}
+
+ul {
+    padding: 0 0 0 0;
 }
 
 .project p {
